--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <!-- Content 25 -->
 
 <section id="wearus" class="content_25 height900 relative">
-	<a href="https://www.youtube.com/embed/RcTFVcoibI0?rel=0&showinfo=0" target="_blank" class="btn white dark_gray play_popup_video"><i class="pink fas fa-play"></i></a>
+	<a href="https://lilo-1.wistia.com/medias/j7lw4w9biq" target="_blank" class="btn white dark_gray play_popup_video"><i class="pink fas fa-play"></i></a>
 </section>
 
 <!-- Content 1 -->
