--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" >
 		<title>LILO.THINK</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" href="i/favicon.png" type="image/x-icon">
+				<link rel="icon" href="i/favicon.png" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700,800,900|Nunito+Sans:200,300,400,600,700,800,900" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -95,6 +95,9 @@
 <!-- Content 15 --> 
 <section class="content_15 padding_bottom90">
     <iframe class="iframe_rede" src="rede.html" name="iframe" scrolling="no"></iframe>
+</section>
+
+<section class="content_1 bg_black_light padding_bottom90">
 	<div class="container nopadding">
 		<div class="white light max_width570 inner">
 			<h2 class="light font62 font_second">Redes de Confiança</h2>
@@ -119,7 +122,7 @@
 <!-- Content 25 -->
 
 <section id="wearus" class="content_25 height900 relative">
-	<a href="https://lilo-1.wistia.com/medias/j7lw4w9biq" target="_blank" class="btn white dark_gray play_popup_video"><i class="pink fas fa-play"></i></a>
+	<a href="https://fast.wistia.com/embed/medias/j7lw4w9biq/swatch" target="_blank" class="btn white dark_gray play_popup_video"><i class="pink fas fa-play"></i></a>
 </section>
 
 <!-- Content 1 -->
