--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <!-- Content 25 -->
 
 <section id="wearus" class="content_25 height900 relative">
-	<a href="https://fast.wistia.com/embed/medias/j7lw4w9biq/swatch" target="_blank" class="btn white dark_gray play_popup_video"><i class="pink fas fa-play"></i></a>
+	<a href="https://lilo-1.wistia.com/medias/j7lw4w9biq" target="_blank" class="btn white dark_gray play_popup_video"><i class="pink fas fa-play"></i></a>
 </section>
 
 <!-- Content 1 -->
