--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" >
 		<title>LILO.THINK</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-				<link rel="icon" href="i/favicon.png" type="image/x-icon">
+		<link rel="icon" href="i/favicon.png" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700,800,900|Nunito+Sans:200,300,400,600,700,800,900" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -87,7 +87,7 @@
 <section class="content_1 bg_pink padding_top100 padding_bottom90">
 	<div class="container nopadding max_width970">
 		<div class="text-center inner">
-			<h2 class="font62 black top30 light font_first bold">PERCURSOS <br />INESPERADOS</h2>
+			<h2 class="font62 black top30 light font_first bold">PERCURSOS<br />INESPERADOS</h2>
 		</div>
 	</div>
 </section>
@@ -114,7 +114,7 @@
 <section class="content_1 bg_pink padding_top100 padding_bottom90">
 	<div class="container nopadding max_width970">
 		<div class="text-center inner">
-			<h2 class="font62 black top30 light font_first bold">HAND <br />storming</h2>
+			<h2 class="font62 black top30 light font_first bold">HAND-STORMING</h2>
 		</div>
 	</div>
 </section>
@@ -130,7 +130,7 @@
 <section class="content_1 bg_pink padding_top100 padding_bottom90">
 	<div class="container nopadding max_width970">
 		<div class="text-center inner">
-			<h2 class="font62 black top30 light font_first bold">FORMAÇÃO  <br /> INFORMAÇÃO <br />COLABORAÇÃO</h2>
+			<h2 class="font62 black top30 light font_first bold">FORMAÇÃO<br />INFORMAÇÃO<br />COLABORAÇÃO</h2>
 		</div>
 	</div>
 </section>
@@ -162,7 +162,7 @@
 <section class="content_1 bg_pink padding_top100 padding_bottom90">
 	<div class="container nopadding max_width970">
 		<div class="text-center inner">
-			<h2 class="font62 black top30 light font_first bold">THINK  <br /> UNTHINK <br />RETHINK</h2>
+			<h2 class="font62 black top30 light font_first bold">THINK<br />UNTHINK<br />RETHINK</h2>
 		</div>
 	</div>
 </section>
@@ -188,7 +188,7 @@
 <!--	<div class="absolute width_full height_full map_overlay"></div>-->
 	<div class="container nopadding white text-center">
 		<div class="margin_auto max_width470 inner">
-			<div class="font_first font20 light"><b>LILO</b> .THINK</div>
+			<div class="font_first font20 light"><b>LILO</b>.THINK</div>
 			<div class="top20 bottom100 font22 font_second light text">
 				Metodologia para Protótipos
 			</div>
