fix for logo on mobile

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	</div>
 
 	<div class="container nopadding white">
-        <img src="i/lilo_vertical_mono-claro_small.png">
+        <img style="max-width: 100%" src="i/lilo_vertical_mono-claro_small.png">
 <!--		<h1 class="font_second light font62 text-center">LILO <br />THINK</h1>-->
 		<div class="top95 bottom105 text-center buttons">
 <!--			<a href="https://www.youtube.com/watch?v=0pdCW9-eiVU" target="_blank" class="btn width70 height70 white font20 line_height70 radius_full"><i class="fas fa-play left5 dark_gray"></i></a>-->
@@ -130,7 +130,7 @@
 <section class="content_1 bg_pink padding_top100 padding_bottom90">
 	<div class="container nopadding max_width970">
 		<div class="text-center inner">
-			<h2 class="font62 black top30 light font_first bold">FORMAÇÃO<br />INFORMAÇÃO<br />COLABORAÇÃO</h2>
+			<p class="font42 black top30 light font_first bold">FORMAÇÃO<br /> INFORMAÇÃO<br /> COLABORAÇÃO</p>
 		</div>
 	</div>
 </section>
@@ -162,7 +162,7 @@
 <section class="content_1 bg_pink padding_top100 padding_bottom90">
 	<div class="container nopadding max_width970">
 		<div class="text-center inner">
-			<h2 class="font62 black top30 light font_first bold">THINK<br />UNTHINK<br />RETHINK</h2>
+			<p class="font42 black top30 light font_first bold">THINK<br/>UNTHINK<br/>RETHINK</p>
 		</div>
 	</div>
 </section>
