--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 				<h2 class="font28 font_second light white max_width700">Conheça um pouco mais da metodologia    </h2>				
 			</div>
 			<div class="col-lg-3 justify-content-right text-center text-lg-right">
-				<a href="#" class="btn light_pink size60 padding_sides40 radius6">Apresentação</a>
+				<a href="https://docs.google.com/presentation/d/1PoqNlHjTo37R-6f2nC1dxsqeCdH6wIfFMMvHf8Z-lOw/edit?usp=sharing" class="btn light_pink size60 padding_sides40 radius6">Apresentação</a>
 			</div>
 		</div>
 	</div>
