--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		
 		<!-- Use this code to set .mp4 video from your server in background. -->
 		
-		<video autoplay loop mute class="opacity7">
+		<video autoplay loop muted class="opacity7">
 			<source src="video/Ice.mp4" type="video/mp4">
 		</video>
 		
