--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <section class="content_1 bg_pink padding_top100 padding_bottom90">
 	<div class="container nopadding max_width970">
 		<div class="text-center inner">
-			<p class="font42 black top30 light font_first bold">FORMAÇÃO<br /> INFORMAÇÃO<br /> COLABORAÇÃO</p>
+			<p class="font42 black top30 light font_first bold">FORMAÇÃO<br /> INFORMAÇÃO<br /> CO-CRIAÇÃO</p>
 		</div>
 	</div>
 </section>
